# sample-creator

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  Stratification.py  setup.cfg
dist_old/: sample_creator-0.0.1-py3-none-any.whl
running-example/: 1-numerical_sampling.html  1-numerical_sampling.ipynb  2-categorical_sampling.html  2-categorical_sampling.ipynb  3-mixed_sampling.html  3-mixed_sampling.ipynb  categorical.html  categorical.ipynb  mixed.html  mixed.ipynb  numerical.html  numerical.ipynb  requirements.txt  type_pull.csv
sample-creator/: 2-categorical_sampling.html  2-categorical_sampling.ipynb  3-mixed_sampling.html  3-mixed_sampling.ipynb  Categorical_Stratification.py  Mixed_Stratification.py  Numerical_Stratifiation.py  Numerical_Stratification.py  One Categorical.py  One Numerical.py  Preprocessing.py  Preprocessing_V2.py  README.md  case_1.html  case_1.ipynb  case_3.ipynb  test_categorical_strat.ipynb
sample-creator/categorical/: sampling.py  stratification.py
sample-creator/mixed/: combination.py  sampling.py  stratification.py
sample-creator/numerical/: combination.py  sampling.py  stratification.py
sample-creator/trash/: Categorical.py  (+4 more)
sample_creator.egg-info/: PKG-INFO
samplecreator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
softsampling/: README.md
softsampling.egg-info/: PKG-INFO
src/: README.md  requirements.txt  setup.cfg
trash/: Mixed_Stratification.py  Numerical_Stratification.py  One Categorical.py  Preprocessing.py  Preprocessing_V2.py  Stratification.py  sample-creator.py  test_preprocessing.ipynb
(+8 files in other folders)
