[metadata]
name = sample-creator
version = 0.0.1
author = SOM Research Lab
description = sample-creator
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/SOM-Research/sampling
    Bug Tracker = https://github.com/SOM-Research/sampling/issues
keywords = sampling, software repositories, empirical studies
license = CC BY-SA
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires = file: requirements.txt
packages=find:

[options.package_data]
* = *.j2