[metadata]
name = softsampling
version = 0.0.1
author = Anonymous
description = sampling for software repositories
long_description = file: README.md
long_description_content_type = text/markdown
# project_urls =
#     Source Code = https://github.com/SOM-Research/sampling
#     Bug Tracker = https://github.com/SOM-Research/sampling/issues
keywords = sampling, software repositories, empirical studies
license = CC BY-SA
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires = file: requirements.txt
packages=find:


[options.packages.find]
exclude =
    running-example*
    .github*
    docs*
    tests*